--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,13 @@
-@import './src/components/list/EventList.scss';
-@import './src/components/details/EventDetails.scss'
+@import "./src/components/list/EventList.scss";
+@import "./src/components/details/EventDetails.scss";
+
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+html {
+  background-color: #262626;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
