--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -2,7 +2,7 @@
   border-radius: 12px;
   margin: 10px auto;
   padding: 1.5em;
-  max-width: 800px;
+  max-width: 90vw;
   height: auto;
 
   background-color: var(--date-color);
@@ -11,24 +11,39 @@
   text-wrap: wrap;
 
   &-title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 42vw 7vw 42vw;
+    grid-template-rows: 100%;
 
     font-weight: 500;
-    font-size: 2em;
-    padding-bottom: 0.5em;
+    font-size: 1.5em;
+    padding-bottom: 1.3em;
   }
 
-  &-pill-group {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  &-title-center {
+    text-align: center;
+  }
+  &-title-right {
+    text-align: right;
+    text-wrap: wrap;
+  }
 
-    font-size: 2em;
+  &-footer {
+    display: grid;
+    grid-template-columns: 42vw 7vw 42vw;
+    grid-template-rows: 100%;
+
+    font-size: 1em;
     font-weight: 400;
 
-    padding-bottom: 0.5em;
+    padding-top: 1em;
+  }
+  &-footer-center {
+    padding: 1em;
+    text-align: center;
+  }
+  &-footer-right {
+    text-align: right;
   }
 
   &-description {
