--- a/src/components/details/EventDetails.scss
+++ b/src/components/details/EventDetails.scss
@@ -35,4 +35,22 @@
     font-weight: 200;
     font-size: 1.8em;
   }
+
+  &-favorites-svg { 
+    width: 1em;
+    height: 1em;
+    font-size: 2.5rem;
+    fill: none;
+    stroke: currentColor;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    cursor: pointer;
+  }
+}
+
+.favorited { 
+  fill: gold;
+  color: gold;
+  filter: drop-shadow(1px 2px 1px rgb(0 0 0 / 0.4));
 }
