--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,35 +1,37 @@
-.footer { 
-    &-tab-wrapper {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        background-color: lightgrey;
-        box-shadow: 0px 10px 7px 7px black;
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
+.footer {
+  &-tab-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 8em;
+    background-color: lightgrey;
+    box-shadow: 0px 10px 7px 7px black;
+  }
 
-    &-tabs { 
-        font-family: 'Futura Bold', sans-serif;
-        font-variant-caps: small-caps;
-        font-size: 1.5em;
+  &-tabs {
+    font-family: "Futura Bold", sans-serif;
+    font-variant-caps: small-caps;
+    font-size: 3em;
 
-        > button { 
-            margin: 0;
-            padding: 0;
-            border: none;
-            background: none;
-            color: var(--day-color);
-            font: inherit;
-            cursor: pointer;
-            outline: none;
-        }
+    > button {
+      margin: 0;
+      padding: 0;
+      border: none;
+      background: none;
+      color: var(--day-color);
+      font: inherit;
+      cursor: pointer;
+      outline: none;
     }
+  }
 
-    &-tab-active {
-        text-decoration: underline 5px;
-    }
+  &-tab-active {
+    background-color: #035980;
+    color: none;
+    text-decoration: underline 5px;
+  }
 }
