Updated header icon sizes

--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -44,6 +44,10 @@
     font-size: 3em;
   }
 
+  &-fav {
+    font-size: 1.5rem;
+  }
+
   &-footer {
     display: flex;
     justify-content: space-between;
