--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -28,7 +28,7 @@
   &-accordion-heading {
     font-family: "Futura Bold", sans-serif;
     font-size: 3em;
-    color: var(--day-color);
+    color: #035980;
   }
 
   &-accordion-svg {
