Menu size changes

--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -4,7 +4,7 @@
     top: 0;
     box-shadow: 0px -10px 7px 7px black;
     z-index: 1000;
-    height: 6em;
+    height: 8em;
   }
 
   &-accordion-content {
@@ -14,11 +14,8 @@
     justify-content: space-between;
     cursor: pointer;
     background-color: lightgrey;
-    height: 6em;
-  }
-
-  &-accordion-content:hover {
-    background-color: white;
+    height: 8em;
+    padding: 0 2em;
   }
 
   &-accordion-drawer {
@@ -57,11 +54,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  padding: 2em;
 
   & > input {
-    border-radius: 5px;
     border: 1px solid black;
-    font-size: 3em;
+    border-radius: 20px;
+    font-size: 4em;
+    height: 2em;
+    width: 75vw;
+    padding: 0 0.5em;
   }
 }
