--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -12,12 +12,12 @@
     justify-content: space-between;
     align-items: center;
     height: 1.7em;
-    font-size: 1.7em;
+    font-size: 2em;
     background: lightgray;
     font-style: none;
     border: none;
-    width: 93vw;
-    padding-top: 1em;
+    width: 98vw;
+    padding: 1vw;
   }
 
   &-accordion-content {
@@ -62,6 +62,21 @@
     stroke-linecap: round;
     stroke-linejoin: round;
     cursor: pointer;
+  }
+
+  &-filter-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &-filter-past-button {
+    width: fit-content;
+    font-size: 2.5em;
+    padding: 0.2em 0.4em;
+    border-radius: 0.4em;
+    color: #035980;
+    font-family: Futura, sans-serif;
   }
 }
 
