--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -1,61 +1,6 @@
 .menu {
-  &-accordion-wrapper {
-    position: sticky;
-    top: 0;
-    box-shadow: 0px -10px 7px 7px black;
-    z-index: 1000;
-    height: 5em;
-  }
-
-  &-contact-us-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 1.7em;
-    font-size: 2em;
-    background: lightgray;
-    font-style: none;
-    border: none;
-    width: 98vw;
-    padding: 1vw;
-  }
-
-  &-accordion-content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    background-color: lightgrey;
-    height: 8em;
-    padding: 0 2em;
-  }
-
-  &-accordion-drawer {
-    background-color: lightgrey;
-  }
-
-  &-accordian-heading-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  &-accordion-heading {
-    font-family: "Futura Bold", sans-serif;
-    font-size: 3em;
-    color: #035980;
-  }
-
-  &-accordion-svg {
-    font-size: 1.3rem;
-    transition: transform 0.3s ease;
-  }
-
   &-favorites-svg {
-    width: 1em;
-    height: 1em;
-    font-size: 6rem;
+    font-size: 1.5rem;
     fill: none;
     stroke: currentColor;
     stroke-width: 2;
@@ -64,48 +9,162 @@
     cursor: pointer;
   }
 
-  &-filter-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  &-header {
+    &-wrapper {
+      position: sticky;
+      top: 0;
+      box-shadow: 0px -10px 7px 7px black;
+      z-index: 1000;
+      height: 4em;
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      background-color: lightgrey;
+      height: 4em;
+      padding: 0 0.7em;
+      max-width: 100vw;
+    }
+    &-icon-wrapper {
+      display: flex;
+      align-items: center;
+    }
+    &-svg {
+      font-size: 1.5rem;
+      height: 2rem;
+      width: 2rem;
+      transition: transform 0.3s ease;
+      margin: 0.2em;
+    }
   }
 
-  &-filter-past-button {
-    width: fit-content;
-    font-size: 2.5em;
-    padding: 0.2em 0.4em;
-    border-radius: 0.4em;
-    color: #035980;
-    font-family: Futura, sans-serif;
+  &-accordian {
+    &-drawer {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: #d3d3d3;
+      min-height: 10em;
+    }
+
+    &-contact {
+      font-size: 1em;
+      border: none;
+      margin-top: 1em;
+    }
+
+    &-links {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
-  &-filter-past-button:active {
-    color: lightgray;
-    background: #035980;
-  }
-  &-filter-past-button:after {
-    background: lightgray;
-    color: #035980;
+  &-filter {
+    &-container {
+      display: flex;
+      flex-direction: column;
+      font-size: 1.3em;
+    }
+    &-label {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 0.5em;
+    }
+    &-checkbox {
+      width: 3em;
+      padding: 0.2em 0.4em;
+      border-radius: 0.4em;
+      color: #035980;
+      font-family: Futura, sans-serif;
+    }
+    &-checkbox:active {
+      color: lightgray;
+      background: #035980;
+    }
+    &-checkbox:after {
+      background: lightgray;
+      color: #035980;
+    }
   }
 }
 
 .expanded {
   transform: rotate(90deg);
 }
+.closed {
+  transform: rotate(180deg);
+}
 
 .search-input-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 1.5em;
-
   & > input {
     border: 1px solid black;
     border-radius: 20px;
-    font-size: 3em;
-    height: 2em;
-    width: 75vw;
-    padding: 0 0.5em;
+    font-size: 2em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .menu {
+    &-accordian {
+      &-drawer {
+        margin: 0 auto;
+        padding: 1em 0;
+        border-radius: 5px;
+        width: 100vw;
+        max-width: 40em;
+      }
+      &-contact {
+        padding: 0 1rem;
+      }
+    }
+    &-filter {
+      &-container {
+        width: 80vw;
+        margin: 0 auto;
+      }
+      &-label {
+        width: 80vw;
+      }
+    }
+  }
+  .search-input-wrapper {
+    & > input {
+      width: 60vw;
+      padding: 0 0.5em;
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .menu {
+    &-accordian {
+      &-drawer {
+        margin: 0 0.5em;
+        margin-left: auto;
+        padding: 1em;
+        border-radius: 5px;
+        width: 20em;
+        max-width: 40em;
+      }
+    }
+    &-filter {
+      &-container {
+        width: 40vw;
+      }
+      &-label {
+        width: 40vw;
+      }
+    }
+  }
+  .search-input-wrapper {
+    & > input {
+      width: 80vw;
+      padding: 0 0.5em;
+      margin: 0 auto;
+    }
   }
 }
