--- a/src/components/list/EventList.scss
+++ b/src/components/list/EventList.scss
@@ -1,10 +1,9 @@
 .event-list {
   width: 100vw;
-  padding-top: 3em;
-  padding-bottom: 12em;
+  padding-bottom: 4em;
 
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
-  overflow-y: auto;
 }
