--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -2,10 +2,8 @@
   display: grid;
   grid-template-rows: 100%;
 
-  border-radius: 12px;
-
   background-color: var(--area-color);
-  opacity: 90%;
+  border-radius: 12px;
 
   text-wrap: wrap;
 }
@@ -34,11 +32,18 @@
     align-items: center;
   }
 
-  &-footer-area {
-    border: black 2px solid;
-    border-radius: 10px;
-    text-align: center;
-    background-color: var(--area-color);
+  &-footer-button {
+    background: var(--tertiary-color);
+    border-radius: 4px;
+    border: 1px solid var(--tertiary-color);
+    display: inline-block;
+    cursor: pointer;
+    color: var(--secondary-color);
+    font-size: 0.9em;
+    min-height: 2em;
+    max-width: 11em;
+    padding: 0 0.5em;
+    text-decoration: none;
   }
 
   &-description {
@@ -48,7 +53,7 @@
   &-description-more {
     border: none;
     background-color: var(--area-color);
-    color: #035980;
+    color: var(--tertiary-color);
   }
 
   &-favorites-svg {
@@ -65,6 +70,141 @@
   fill: gold;
   color: gold;
   filter: drop-shadow(1px 2px 1px rgb(0 0 0 / 0.4));
+}
+
+@media only screen and (max-width: 600px) {
+  .event-tile {
+    grid-template-columns: 2.5em auto;
+    margin: 10px auto;
+    padding: 0.8em;
+    width: 90vw;
+    height: auto;
+  }
+
+  .event-details {
+    max-width: 82vw;
+    padding-left: 0.7em;
+
+    &-icons {
+      font-size: 1.3em;
+    }
+
+    &-title {
+      font-weight: 500;
+      font-size: 18;
+
+      height: 2em;
+    }
+
+    &-title-left {
+      font-size: 1.5em;
+    }
+
+    &-fav {
+      font-size: 1.5rem;
+    }
+
+    &-footer {
+      font-size: 1.1em;
+      font-weight: 400;
+
+      min-height: 1.6em;
+    }
+
+    &-footer-area {
+      padding: 0.3em;
+    }
+
+    &-footer-where {
+      max-width: 50%;
+    }
+
+    &-description {
+      font-weight: 200;
+      font-size: 1.2em;
+      min-height: 2em;
+      padding-top: 0.7em;
+      padding-bottom: 0.4em;
+    }
+
+    &-description-more {
+      font-size: 1em;
+    }
+
+    &-favorites-svg {
+      width: 1em;
+      height: 1em;
+      font-size: 1.3rem;
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .event-tile {
+    grid-template-columns: 2.5em auto;
+    margin: 10px auto;
+    padding: 0.8em;
+    margin: 0.5em;
+    width: 43vw;
+    max-width: 25em;
+    height: auto;
+  }
+
+  .event-details {
+    padding-left: 0.7em;
+
+    &-icons {
+      font-size: 1.3em;
+    }
+
+    &-title {
+      font-weight: 500;
+      font-size: 18;
+
+      height: 2em;
+    }
+
+    &-title-left {
+      font-size: 1.5em;
+    }
+
+    &-fav {
+      font-size: 1.5rem;
+    }
+
+    &-footer {
+      font-size: 1.1em;
+      font-weight: 400;
+
+      min-height: 1.6em;
+    }
+
+    &-footer-area {
+      padding: 0.3em;
+    }
+
+    &-footer-where {
+      max-width: 50%;
+    }
+
+    &-description {
+      font-weight: 200;
+      font-size: 1.2em;
+      min-height: 2em;
+      padding-top: 0.7em;
+      padding-bottom: 0.4em;
+    }
+
+    &-description-more {
+      font-size: 1em;
+    }
+
+    &-favorites-svg {
+      width: 1em;
+      height: 1em;
+      font-size: 1.3rem;
+    }
+  }
 }
 
 @media only screen and (max-width: 600px) {
