--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -7,14 +7,15 @@
     position: fixed;
     bottom: 0;
     width: 100vw;
-    height: 2em;
-    background-color: lightgrey;
+    height: 3em;
+    background-color: var(--primary-color);
     box-shadow: 0px 10px 7px 7px black;
   }
 
   &-tabs {
     font-family: "Futura Bold", sans-serif;
     font-variant-caps: small-caps;
+    font-size: 1em;
     font-size: 1em;
 
     > button {
@@ -32,15 +33,16 @@
     font-family: "Futura Bold", sans-serif;
     font-variant-caps: small-caps;
     font-size: 1em;
+    font-size: 1em;
 
-    background-color: #035980;
+    background-color: var(--tertiary-color);
     border-radius: 10px;
-    color: lightgrey;
+    color: var(--primary-color);
 
     > button {
       margin: 0;
-      padding: 1em;
-      color: lightgrey;
+      padding: 1.5em;
+      color: var(--primary-color);
       border: none;
       background: none;
       font: inherit;
