--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -1,6 +1,7 @@
 .menu {
   &-favorites-svg {
     font-size: 1.5rem;
+    font-size: 1.5rem;
     fill: none;
     stroke: currentColor;
     stroke-width: 2;
@@ -24,7 +25,7 @@
       align-items: center;
       justify-content: space-between;
       cursor: pointer;
-      background-color: lightgrey;
+      background-color: var(--primary-color);
       height: 4em;
       padding: 0 0.7em;
       max-width: 100vw;
@@ -47,7 +48,8 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      background-color: #d3d3d3;
+      background-color: var(--primary-color);
+      border-radius: 0 0 5px 5px;
       min-height: 10em;
     }
 
@@ -67,33 +69,72 @@
     &-container {
       display: flex;
       flex-direction: column;
-      font-size: 1.3em;
     }
     &-label {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 0.5em;
+      align-items: center;
+      font-size: 1.2em;
+      margin: 0.3em 0;
     }
-    &-checkbox {
-      width: 3em;
-      padding: 0.2em 0.4em;
-      border-radius: 0.4em;
-      color: #035980;
-      font-family: Futura, sans-serif;
+
+    &-switch {
+      position: relative;
+      display: inline-block;
+      width: 2.6em;
+      height: 1.2em;
     }
-    &-checkbox:active {
-      color: lightgray;
-      background: #035980;
+    /* Hide default HTML checkbox */
+    &-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
     }
-    &-checkbox:after {
-      background: lightgray;
-      color: #035980;
+
+    /* The slider */
+    &-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      border-radius: 34px;
+      background-color: #ccc;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+    }
+    &-slider:before {
+      position: absolute;
+      border-radius: 50%;
+      content: "";
+      height: 1em;
+      width: 1em;
+      left: 0.1em;
+      bottom: 0.1em;
+      background-color: white;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+    }
+    input:checked + &-slider {
+      background-color: #2196f3;
+    }
+    input:focus + &-slider {
+      box-shadow: 0 0 1px #2196f3;
+    }
+    input:checked + &-slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
     }
   }
 }
 
 .expanded {
   transform: rotate(90deg);
+}
+.closed {
+  transform: rotate(180deg);
 }
 .closed {
   transform: rotate(180deg);
@@ -112,8 +153,7 @@
     &-accordian {
       &-drawer {
         margin: 0 auto;
-        padding: 1em 0;
-        border-radius: 5px;
+        padding: 0 0 1em;
         width: 100vw;
         max-width: 40em;
       }
@@ -146,17 +186,18 @@
         margin: 0 0.5em;
         margin-left: auto;
         padding: 1em;
-        border-radius: 5px;
-        width: 20em;
+        width: 40vw;
         max-width: 40em;
       }
     }
     &-filter {
       &-container {
         width: 40vw;
+        max-width: 40em;
       }
       &-label {
         width: 40vw;
+        max-width: 40em;
       }
     }
   }
