--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,16 @@
 @font-face {
   font-family: "Futura Bold";
   src: url("../assets/fonts/Futura\ Bold.otf") format("opentype");
+  font-family: "Futura Bold";
+  src: url("../assets/fonts/Futura\ Bold.otf") format("opentype");
+}
+
+:root {
+  --primary-color: #d7d7d7;
+  --secondary-color: #e2f7e4;
+  --tertiary-color: #496d2e;
+  --fav-color: #ffc35c;
+  --backdrop-color: #000000;
 }
 
 * {
@@ -14,7 +24,7 @@
 
 html,
 body {
-  background-color: #262626;
+  background-color: var(--backdrop-color);
   width: 100%;
   height: 100%;
   padding: 0;
