--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -1,15 +1,7 @@
 .menu {
-  &-accordion-wrapper {
-    position: sticky;
-    top: 0;
-    box-shadow: 0px -10px 7px 7px black;
-    z-index: 1000;
-    height: 5em;
-  }
-
   &-contact-us-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 4em;
     font-size: 2em;
@@ -20,43 +12,8 @@
     padding: 1vw;
   }
 
-  &-accordion-content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    background-color: lightgrey;
-    height: 8em;
-    padding: 0 2em;
-  }
-
-  &-accordion-drawer {
-    background-color: lightgrey;
-    width: 50vw;
-  }
-
-  &-accordian-heading-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  &-accordion-heading {
-    font-family: "Futura Bold", sans-serif;
-    font-size: 3em;
-    color: #035980;
-  }
-
-  &-accordion-svg {
-    font-size: 1.3rem;
-    transition: transform 0.3s ease;
-  }
-
   &-favorites-svg {
-    width: 1em;
-    height: 1em;
-    font-size: 6rem;
+    font-size: 1.5rem;
     fill: none;
     stroke: currentColor;
     stroke-width: 2;
@@ -65,31 +22,63 @@
     cursor: pointer;
   }
 
-  &-filter-container {
-    display: flex;
-    padding-left: 0.5em;
-    padding-top: 0.5em;
-    flex-direction: column;
-    font-size: 2.5em;
-    width: 50vw;
+  &-accordion {
+    &-wrapper {
+      position: sticky;
+      top: 0;
+      box-shadow: 0px -10px 7px 7px black;
+      z-index: 1000;
+      height: 4em;
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      background-color: lightgrey;
+      height: 4em;
+      padding: 0 0.7em;
+      max-width: 100vw;
+    }
+    &-drawer {
+      background-color: lightgrey;
+      width: 50vw;
+    }
+    &-svg {
+      font-size: 2rem;
+      height: 2rem;
+      width: 2rem;
+      transition: transform 0.3s ease;
+    }
   }
 
-  &-filter-past-button {
-    width: fit-content;
-    font-size: 2.5em;
-    padding: 0.2em 0.4em;
-    border-radius: 0.4em;
-    color: #035980;
-    font-family: Futura, sans-serif;
-  }
-
-  &-filter-past-button:active {
-    color: lightgray;
-    background: #035980;
-  }
-  &-filter-past-button:after {
-    background: lightgray;
-    color: #035980;
+  &-filter {
+    &-container {
+      display: flex;
+      padding-left: 0.5em;
+      padding-top: 0.5em;
+      flex-direction: column;
+      font-size: 2.5em;
+      width: 50vw;
+    }
+    &-past-button {
+      width: fit-content;
+      font-size: 2.5em;
+      padding: 0.2em 0.4em;
+      border-radius: 0.4em;
+      color: #035980;
+      font-family: Futura, sans-serif;
+    }
+    &-past-button:active {
+      color: lightgray;
+      background: #035980;
+    }
+    &-past-button:after {
+      background: lightgray;
+      color: #035980;
+    }
   }
 }
 
@@ -98,17 +87,11 @@
 }
 
 .search-input-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
   & > input {
     border: 1px solid black;
     border-radius: 20px;
-    font-size: 3em;
-    height: 2em;
-    width: 68vw;
+    font-size: 2em;
+    width: 60vw;
     padding: 0 0.5em;
   }
 }
