--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 @import "./src/components/footer/Footer.scss";
 
 @font-face {
-  font-family: 'Futura Bold';
-  src: url('../assets/fonts/Futura\ Bold.otf') format('opentype');
+  font-family: "Futura Bold";
+  src: url("../assets/fonts/Futura\ Bold.otf") format("opentype");
 }
 
 * {
@@ -15,8 +15,8 @@
 html,
 body {
   background-color: #262626;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
