--- a/src/components/list/EventList.scss
+++ b/src/components/list/EventList.scss
@@ -3,6 +3,7 @@
   padding-bottom: 4em;
 
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  flex-direction: row;
   flex-wrap: wrap;
 }
