--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -143,7 +143,8 @@
     margin: 10px auto;
     padding: 0.8em;
     margin: 0.5em;
-    width: 44vw;
+    width: 43vw;
+    max-width: 25em;
     height: auto;
   }
 
