--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -1,17 +1,4 @@
 .menu {
-  &-contact-us-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4em;
-    font-size: 2em;
-    background: lightgray;
-    font-style: none;
-    border: none;
-    width: 50vw;
-    padding: 1vw;
-  }
-
   &-favorites-svg {
     font-size: 1.5rem;
     fill: none;
@@ -22,7 +9,7 @@
     cursor: pointer;
   }
 
-  &-accordion {
+  &-header {
     &-wrapper {
       position: sticky;
       top: 0;
@@ -42,40 +29,63 @@
       padding: 0 0.7em;
       max-width: 100vw;
     }
-    &-drawer {
-      background-color: lightgrey;
-      width: 50vw;
+    &-icon-wrapper {
+      display: flex;
+      align-items: center;
     }
     &-svg {
-      font-size: 2rem;
+      font-size: 1.5rem;
       height: 2rem;
       width: 2rem;
       transition: transform 0.3s ease;
+      margin: 0.2em;
+    }
+  }
+
+  &-accordian {
+    &-drawer {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      background-color: #d3d3d3;
+      min-height: 10em;
+    }
+
+    &-contact {
+      font-size: 1em;
+      border: none;
+      margin-top: 1em;
+    }
+
+    &-links {
+      display: flex;
+      justify-content: space-between;
     }
   }
 
   &-filter {
     &-container {
       display: flex;
-      padding-left: 0.5em;
-      padding-top: 0.5em;
       flex-direction: column;
-      font-size: 2.5em;
-      width: 50vw;
+      font-size: 1.3em;
     }
-    &-past-button {
-      width: fit-content;
-      font-size: 2.5em;
+    &-label {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 0.5em;
+    }
+    &-checkbox {
+      width: 3em;
       padding: 0.2em 0.4em;
       border-radius: 0.4em;
       color: #035980;
       font-family: Futura, sans-serif;
     }
-    &-past-button:active {
+    &-checkbox:active {
       color: lightgray;
       background: #035980;
     }
-    &-past-button:after {
+    &-checkbox:after {
       background: lightgray;
       color: #035980;
     }
@@ -85,13 +95,76 @@
 .expanded {
   transform: rotate(90deg);
 }
+.closed {
+  transform: rotate(180deg);
+}
 
 .search-input-wrapper {
   & > input {
     border: 1px solid black;
     border-radius: 20px;
     font-size: 2em;
-    width: 60vw;
-    padding: 0 0.5em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .menu {
+    &-accordian {
+      &-drawer {
+        margin: 0 auto;
+        padding: 1em 0;
+        border-radius: 5px;
+        width: 100vw;
+        max-width: 40em;
+      }
+      &-contact {
+        padding: 0 1rem;
+      }
+    }
+    &-filter {
+      &-container {
+        width: 80vw;
+        margin: 0 auto;
+      }
+      &-label {
+        width: 80vw;
+      }
+    }
+  }
+  .search-input-wrapper {
+    & > input {
+      width: 60vw;
+      padding: 0 0.5em;
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .menu {
+    &-accordian {
+      &-drawer {
+        margin: 0 0.5em;
+        margin-left: auto;
+        padding: 1em;
+        border-radius: 5px;
+        width: 20em;
+        max-width: 40em;
+      }
+    }
+    &-filter {
+      &-container {
+        width: 40vw;
+      }
+      &-label {
+        width: 40vw;
+      }
+    }
+  }
+  .search-input-wrapper {
+    & > input {
+      width: 80vw;
+      padding: 0 0.5em;
+      margin: 0 auto;
+    }
   }
 }
