Fix sizing; replace all day event times with "All Day"

--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -72,7 +72,7 @@
     grid-template-columns: 2.5em auto;
     margin: 10px auto;
     padding: 0.8em;
-    max-width: 90vw;
+    width: 90vw;
     height: auto;
   }
 
