--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import "./src/components/list/EventList.scss";
-@import "./src/components/details/EventTile.scss";
-@import "./src/components/header/Menu.scss";
-@import "./src/components/footer/Footer.scss";
+@use "components/list/EventList.scss";
+@use "components/details/EventTile.scss";
+@use "components/header/Menu.scss";
+@use "components/footer/Footer.scss";
 
 @font-face {
   font-family: 'Futura Bold';
