--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -1,34 +1,55 @@
 .event-tile {
   display: grid;
-  grid-template-rows: 100%;
+  grid-template-columns: 100%;
 
-  background-color: var(--area-color);
   border-radius: 12px;
 
   text-wrap: wrap;
 }
 
-.event-details {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-wrap: wrap;
-
-  &-icons {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
+.event-header {
   &-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    font-weight: 500;
+    font-size: 18;
+
+    height: 2em;
+
+    &-left {
+      font-size: 1.2em;
+    }
+  }
+}
+
+.event-details {
+  display: flex;
+  flex-direction: row;
+  text-wrap: wrap;
+
+  &-container {
+    padding: 0.5em 0 0 0.5em;
+  }
+
+  &-icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    padding-top: 0.5em;
+    min-width: 42px;
+  }
+
+  &-title {
+    margin: 0;
+    font-size: 1.5em;
   }
 
   &-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
 
@@ -74,7 +95,7 @@
 
 @media only screen and (max-width: 600px) {
   .event-tile {
-    grid-template-columns: 2.5em auto;
+    grid-template-rows: 2.5em auto;
     margin: 10px auto;
     padding: 0.8em;
     width: 90vw;
@@ -82,22 +103,10 @@
   }
 
   .event-details {
-    max-width: 82vw;
-    padding-left: 0.7em;
+    max-width: 89vw;
 
     &-icons {
       font-size: 1.3em;
-    }
-
-    &-title {
-      font-weight: 500;
-      font-size: 18;
-
-      height: 2em;
-    }
-
-    &-title-left {
-      font-size: 1.5em;
     }
 
     &-fav {
@@ -123,8 +132,9 @@
       font-weight: 200;
       font-size: 1.2em;
       min-height: 2em;
-      padding-top: 0.7em;
-      padding-bottom: 0.4em;
+      padding-top: 1em;
+      padding-bottom: 1em;
+      margin: 0;
     }
 
     &-description-more {
@@ -141,166 +151,17 @@
 
 @media only screen and (min-width: 600px) {
   .event-tile {
-    grid-template-columns: 2.5em auto;
-    margin: 10px auto;
+    grid-template-rows: 2.5em auto;
+    margin: 10px 5px;
     padding: 0.8em;
-    margin: 0.5em;
     width: 43vw;
-    max-width: 25em;
+    max-width: 22em;
     height: auto;
   }
 
   .event-details {
-    padding-left: 0.7em;
-
     &-icons {
       font-size: 1.3em;
-    }
-
-    &-title {
-      font-weight: 500;
-      font-size: 18;
-
-      height: 2em;
-    }
-
-    &-title-left {
-      font-size: 1.5em;
-    }
-
-    &-fav {
-      font-size: 1.5rem;
-    }
-
-    &-footer {
-      font-size: 1.1em;
-      font-weight: 400;
-
-      min-height: 1.6em;
-    }
-
-    &-footer-area {
-      padding: 0.3em;
-    }
-
-    &-footer-where {
-      max-width: 50%;
-    }
-
-    &-description {
-      font-weight: 200;
-      font-size: 1.2em;
-      min-height: 2em;
-      padding-top: 0.7em;
-      padding-bottom: 0.4em;
-    }
-
-    &-description-more {
-      font-size: 1em;
-    }
-
-    &-favorites-svg {
-      width: 1em;
-      height: 1em;
-      font-size: 1.3rem;
-    }
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .event-tile {
-    grid-template-columns: 2.5em auto;
-    margin: 10px auto;
-    padding: 0.8em;
-    width: 90vw;
-    height: auto;
-  }
-
-  .event-details {
-    max-width: 82vw;
-    padding-left: 0.7em;
-
-    &-icons {
-      font-size: 1.3em;
-    }
-
-    &-title {
-      font-weight: 500;
-      font-size: 18;
-
-      height: 2em;
-    }
-
-    &-title-left {
-      font-size: 1.5em;
-    }
-
-    &-fav {
-      font-size: 1.5rem;
-    }
-
-    &-footer {
-      font-size: 1.1em;
-      font-weight: 400;
-
-      min-height: 1.6em;
-    }
-
-    &-footer-area {
-      padding: 0.3em;
-    }
-
-    &-footer-where {
-      max-width: 50%;
-    }
-
-    &-description {
-      font-weight: 200;
-      font-size: 1.2em;
-      min-height: 2em;
-      padding-top: 0.7em;
-      padding-bottom: 0.4em;
-    }
-
-    &-description-more {
-      font-size: 1em;
-    }
-
-    &-favorites-svg {
-      width: 1em;
-      height: 1em;
-      font-size: 1.3rem;
-    }
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .event-tile {
-    grid-template-columns: 2.5em auto;
-    margin: 10px auto;
-    padding: 0.8em;
-    margin: 0.5em;
-    width: 43vw;
-    max-width: 25em;
-    height: auto;
-  }
-
-  .event-details {
-    padding-left: 0.7em;
-
-    &-icons {
-      font-size: 1.3em;
-    }
-
-    &-title {
-      font-weight: 500;
-      font-size: 18;
-
-      height: 2em;
-    }
-
-    &-title-left {
-      font-size: 1.5em;
     }
 
     &-fav {
