--- a/src/components/details/EventTile.scss
+++ b/src/components/details/EventTile.scss
@@ -49,7 +49,7 @@
 
   &-footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
 
