--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -70,6 +70,12 @@
       display: flex;
       flex-direction: column;
     }
+    &-title {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-top: 0.5em;
+    }
     &-label {
       display: flex;
       justify-content: space-between;
