--- a/src/components/header/Menu.scss
+++ b/src/components/header/Menu.scss
@@ -19,11 +19,18 @@
       height: 4em;
     }
 
+    &-map {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 3em;
+    }
+
     &-content {
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
       cursor: pointer;
       background-color: var(--primary-color);
       height: 4em;
