--- a/src/components/list/EventList.scss
+++ b/src/components/list/EventList.scss
@@ -26,7 +26,7 @@
   }
   &-button-wrapper {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 2em;
   }
 }
